fixed logo on mobile not visible

--- a/app/styles/landingpage/intro.scss
+++ b/app/styles/landingpage/intro.scss
@@ -1,11 +1,12 @@
 .sy-intro {
-  height: calc(100vh - 60px);
+  height: calc(100vh - 100px);
   margin-left: -20px;
   margin-right: -20px;
   display: flex;
   align-items: flex-start;
 
   @include media-breakpoint-up(sm) {
+    height: calc(100vh - 60px);
     align-items: center;
   }
 }
@@ -32,7 +33,7 @@
   height: calc(100vh - 60px);
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: -2;
 
   &::before {
     content: '';
